public/css/common.css
/* ... */
.mgmt-tm .action {
		/*width:22%!important;*/
		width: 246px!important;
}

.new .privatekey {
	width: 183px!important;
}

.new .description {
	width:456px!important;
}

.new .action {
			width: 239px!important;
padding-left: 20px;
}

.mgmt-tm .progress {display: block; height: 10px; background: #fff}

/*.btn-grey.uploadtm, .btn-grey.addtmxfile {
width: 100px!important;
}

.new td.action {
width: 330px!important;
}



.new td.description {
width: 290px!important;
}

#new-tm-description {
padding: 5px 12px;
}

.mgmt-tm .fileupload {
width: 22%;
}*/

.new td.fileupload {
width: 92px;
}
 .back-mgmt {padding:20px; margin-right:20px;}

.memory-mgmt.btn {
width: auto;
}

.mgmt-tm, .mgmt-gl, .mgmt-tm-nested {
	border-bottom:40px;
	border-collapse:collapse;
	font-size: 15px;
    float: left;
    table-layout: fixed;
    width: 100%;
    margin-bottom: 20px;
    border: 1px solid #ccc;
}

.mgmt-tm .btn-ok, .mgmt-tm .btn-grey {margin:0 3px;
padding:4px 10px;
cursor:pointer!important;
font-size:14px;}

.btn-grey.uploadtm {
clear: right;
}

.btn-grey:active {
	border:1px solid #333;
}



.btn-grey:active:active {
-moz-box-shadow: inset 0 0 1px 1px #888;
-webkit-box-shadow: inset 0 0 1px 1px #888;
box-shadow: inset 0 0 1px 1px #888;}

.mgmt-tm .action .btn-grey, .addtmxrow .btn-grey {width: 80px;
text-align: center;
}
.btn-grey:hover {
cursor: pointer;
-webkit-box-shadow: 0 1px 2px #ccc;
box-shadow: 0 1px 2px #ccc;
border: 1px solid #000;
}
body.cattool .mgmt-tm.mine thead,
.mgmt-tm.new thead,
.mgmt-tm.anonymous thead
{
    display: none;
}
.canceladdtmx {
    cursor: pointer;
    margin-bottom: 30px;
}
td.uploadfile .canceladdtmx {
    margin-bottom: 0px;
}
.canceladdtmx:hover {
	color:red;
}

.dataTables_length, .dataTables_info {display: none;}
.dataTables_filter {
float: right;
margin-top: 10px;
}

.check.sorting:after, .action.sorting:after{
	display: none;
}

.sorting_asc:after {
	content: "\f0dd";
	float:right;
    margin-top: 6px;
}

.sorting_desc:after {
	content: "\f0de";
	float:right;
    margin-top: 11px;
}

.sorting:after{
	content: "\f0dc";
	float:right;
    margin-top: 7px;
}

.dataTables_paginate {float:right; margin-top:10px;}
.mgmt-tm .btn-grey span {
    float: left;
    margin: 2px 3px 2px 0px;
}
#activetm td.uploadfile .btn-grey {
    display: none;
    margin-top: -3px;
}
.mgmt-tm td.uploadfile .btn-grey span {
    margin: 0px;
}

/*
#activetm {margin-bottom: 15px;}
*/
#activetm thead {
  /*  display: table-header-group !important;*/
  background: #6d6e71;
}
#activetm tbody {
    display: block;
}
#activetm tr:not(.new) {
    display: block;
    width: 100%;
}

#activetm td.uploadfile {
    display: block;
    background: #fff;
    padding: 10px;
    border-top: 1px solid #E7E7E7;
	box-shadow: inset 0px 3px 4px 0px #f4f4f4;
}
#activetm tbody tr.mine {
    cursor: move;
}
#activetm tr.owner td {
    background: #fff !important;
}
#activetm tr.anonymous td {
    background: #f6f6f6 !important;
}

#inactivetm {cursor: initial; float:left;}
td.no-gutter {padding:0!important;}
.dataTables_empty {
width: 1042px;
}
.mgmt-container .icon-search {
margin-top: 2px;
margin-left: 5px;
}

.mgmt-container .search {
padding: 2px;
margin-right: 2px;
display: block;
float: right;
margin-bottom: 10px;
}

#activetm td {background: #c4f3ff;}
#activetm tr.uploadfile td {background: #fff;}
#inactivetm td {background: #f3f3f3;}
.mgmt-tm td, .mgmt-tm th, .mgmt-gl td, .mgmt-gl th {
    padding: 8px 5px;
    background: #fff;

}
.mgmt-tm td,  .mgmt-gl td {
    border-top: 1px solid #ccc;
}

.addtmxrow td, .new td {
background: #fff!important;
}


.mgmt-panel select {
    width: 230px;
    height: 20px;
    padding: 5px;
    font-size: 13px;
    border: 1px solid #ccc;
    margin: 1px 0 5px 0;
}

.btn-confirm {margin-top:25px!important;}
span.newrow.text-center {
width: 100%;
display: block;
}

.mgmt-panel h3 {
margin: 10px 0;
}

.addrow {width:100%;}
.addrow label {float:left;}

.mgmt-panel p {
margin: 10px 0 10px;
clear: both;
text-align: left;
}

.mgmt-add-tm input, .mgmt-add-gl input {
 font-size: 12px !important;
height: 22px;
color: #999999;
float:left;
padding: 5px 10px;
border: 1px solid #abadb3;
-webkit-transition: all 100ms ease-in;
-moz-transition: all 100ms ease-in;
}

.nonumber {display:none;}
.disabled .nonumber {display:block!important;}
.disabled .number {display:none;}
.resource {
margin-bottom: -7px;
}
tr.disabled td {
background: #F3F3F3!important;
}

.mgmt-add-gl input {
		width: 225px;
		margin-right:12px;
}
.searchbox
{
	display: none;
	position: fixed;
	float: left;
	width: 100%;
	font-size:12px;
	border-bottom: 1px solid #666;
	background:#efefef url(../img/point.gif) 0 0 repeat-x;
	margin-top: -27px;
	padding:5px 4% 0px 4%;
	-moz-box-shadow: 0 1px 3px #666;
	-webkit-box-shadow: 0 1px 10px #666;
	-moz-border-radius-bottom-right:2px;
	-webkit-border-bottom-right-radius:2px;
	-moz-border-radius-bottomleft:2px;
	-webkit-border-bottom-left-radius:2px;
	z-index: 9999;
}

.clear {clear:both;}

header .searchbox {
	margin-top:28px;
}

.mgmt-tm th, .mgmt-gl th {background: #6d6e71;
color: #fff;
    height: 20px;
line-height: 15px;
}

body.filterOpen .searchbox
{
	display: block;
	}

	.searchbox label, .mgmt-panel label
	{
		display: inline;
		width: auto !important;
/*		margin-right: 5px;*/
		text-transform: uppercase;
}

.mgmt-panel label {
text-transform: none;
padding-bottom: 5px;
font-weight: bold;
}

a.memory-mgmt.pull-right {
margin-top: 35px;
background: url(../img/sprite.png) 0 -259px no-repeat;
background-size: 12px;
padding: 0 0 5px 18px;
margin-bottom: 5px;
}


/* Tabs */

.nav-tabs {
border-bottom: 1px solid #ddd;
float: left;
clear: both;
width:100%;
}

.nav-tabs>li {
float: left;
position: relative;
width: auto !important;
background: #efefef url(../img/point.gif) 0 0 repeat-x;
z-index: 9999999999999;
}
.nav>li {
position: relative;
display: block;
}

.nav>li>a {
position: relative;
text-decoration:none;
padding: 10px 15px;
}
/* ... */

